# gentoo-installer

./: pyproject.toml
src/gentoo_installer/: __init__.py  main.py
src/gentoo_installer/installer/: core.py
src/gentoo_installer/partitioner/: core.py
src/gentoo_installer/taker/: __init__.py  core.py
