[project]
name = "gentoo-installer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "pydicts>=1.4.0",
    "python-gnupg>=0.5.6",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]

[project.scripts]
gentoo-installer = "gentoo_installer.main:main"

[tool.uv]
package = true